 Bug 352220 -  Inconsistent focus events when returning to a document frame, r=marcoz, davidb